@@ -1,2 +1,4 @@
 [B]Version 1.1.42[/B]
 pornwild - new site
+xvideos - pornstars listing fixed
+xvideos - tags pagination fixed
